--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -53,21 +53,27 @@ workflows:
             # Print the comment for debugging
             echo "Generated Comment:"
             cat comment.md
-
         - run: |
-            echo "Posting comment to GitHub PR..."
-            PR_NUMBER=$(echo "$ATLANTIS_GITHUB_PAYLOAD" | jq -r '.pull.number')
-            REPO_FULL_NAME=$(echo "$ATLANTIS_GITHUB_PAYLOAD" | jq -r '.pull.base.repo.full_name')
+            echo "Posting a Custom Comment to GitHub..."
 
-            # Read the comment content
-            COMMENT_CONTENT=$(cat comment.md)
+            # Define the comment content
+            COMMENT_BODY=$(cat <<EOF
+            ### 📊 Custom Table Data
+            ---
+            | Column 1 | Column 2 | Column 3 |
+            |----------|----------|----------|
+            | Data A   | Data B   | Data C   |
+            | Data D   | Data E   | Data F   |
+            ---
+            *This is an automated comment generated during Atlantis plan.*
+            EOF
+            )
 
-            # Post the comment using GitHub API
-            curl -s -X POST \
-              -H "Authorization: token $GITHUB_TOKEN" \
+            # Post the comment to the PR
+            curl -s -X POST -H "Authorization: token $GITHUB_TOKEN" \
               -H "Accept: application/vnd.github.v3+json" \
-              -d "$(jq -n --arg body "$COMMENT_CONTENT" '{"body": $body}')" \
-              "https://api.github.com/repos/$REPO_FULL_NAME/issues/$PR_NUMBER/comments"
+              "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/issues/$PULL_REQUEST_NUMBER/comments" \
+              -d "{\"body\": \"$COMMENT_BODY\"}"
 
     apply:
       steps:
