--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -13,45 +13,45 @@ workflows:
       steps:
         - run: echo "Starting custom workflow"
         - run: git --version
-        - run: |
-            echo "Initializing Terraform..."
-            terraform init
-        - run: |
-            echo "Cleaning up previous plan files..."
-            rm -f tfplan.binary tfplan.json
-        - run: |
-            echo "Generating Terraform plan in JSON format..."
-            terraform plan -out=tfplan.binary
-            terraform show -json tfplan.binary > tfplan.json
-        - run: |
-            echo "Running OPA policy checks..."
-            echo "## OPA Policy Check Results"
-
-            # Run OPA and save output
-            opa eval --format json --data policy.rego --input tfplan.json "data.terraform.analysis.violations" > opa_output.json
-
-            # Parse OPA output and generate Markdown table
-            echo "DEBUG: OPA Output Structure:"
-            cat opa_output.json
-
-            # Generate Markdown table
-            echo "Generating Markdown table..."
-            jq -r '
-              ["Resource", "Violation", "Message"] as $headers |
-              [["---", "---", "---"]] as $separator |
-              .result[].expressions[].value[]? | 
-              [.resource, .violation, .message] as $row |
-              [$headers, $separator, $row] | 
-              .[] | @tsv
-            ' opa_output.json | sed 's/\t/ | /g' > opa_table.md
-
-            # Add Markdown table to a comment file
-            echo -e "### OPA Policy Check Results\n" > comment.md
-            cat opa_table.md >> comment.md
-
-            # Print the comment for debugging
-            echo "Generated Comment:"
-            cat comment.md
+#        - run: |
+#            echo "Initializing Terraform..."
+#            terraform init
+#        - run: |
+#            echo "Cleaning up previous plan files..."
+#            rm -f tfplan.binary tfplan.json
+#        - run: |
+#            echo "Generating Terraform plan in JSON format..."
+#            terraform plan -out=tfplan.binary
+#            terraform show -json tfplan.binary > tfplan.json
+#        - run: |
+#            echo "Running OPA policy checks..."
+#            echo "## OPA Policy Check Results"
+#
+#            # Run OPA and save output
+#            opa eval --format json --data policy.rego --input tfplan.json "data.terraform.analysis.violations" > opa_output.json
+#
+#            # Parse OPA output and generate Markdown table
+#            echo "DEBUG: OPA Output Structure:"
+#            cat opa_output.json
+#
+#            # Generate Markdown table
+#            echo "Generating Markdown table..."
+#            jq -r '
+#              ["Resource", "Violation", "Message"] as $headers |
+#              [["---", "---", "---"]] as $separator |
+#              .result[].expressions[].value[]? |
+#              [.resource, .violation, .message] as $row |
+#              [$headers, $separator, $row] |
+#              .[] | @tsv
+#            ' opa_output.json | sed 's/\t/ | /g' > opa_table.md
+#
+#            # Add Markdown table to a comment file
+#            echo -e "### OPA Policy Check Results\n" > comment.md
+#            cat opa_table.md >> comment.md
+#
+#            # Print the comment for debugging
+#            echo "Generated Comment:"
+#            cat comment.md
         - run: |
             echo "Extracting GitHub Repository Details..."
             
