--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -53,19 +53,19 @@ workflows:
 #            cat comment.md
         - run: |
             echo "Extracting GitHub Repository Details..."
-            
-            # Automatically extract repo owner and name from git remote
-            REPO_FULL_URL=$(git config --get remote.origin.url)
-            REPO_NAME=$(basename -s .git $(echo $REPO_FULL_URL | sed -E 's|.*github.com[:/](.*)|\1|'))
-            REPO_OWNER=$(echo $REPO_FULL_URL | sed -E 's|.*github.com[:/]([^/]+)/.*|\1|')
-            
-            # Get the current Pull Request number dynamically (for GitHub Actions, Atlantis, etc.)
-            echo "$PULL_REQUEST_NUMBER"
-            $PR_NUMBER = 3
-            
-            echo "Repo Owner: $REPO_OWNER"
-            echo "Repo Name: $REPO_NAME"
-            echo "PR Number: $PULL_REQUEST_NUMBER"
+#
+#            # Automatically extract repo owner and name from git remote
+#            REPO_FULL_URL=$(git config --get remote.origin.url)
+#            REPO_NAME=$(basename -s .git $(echo $REPO_FULL_URL | sed -E 's|.*github.com[:/](.*)|\1|'))
+#            REPO_OWNER=$(echo $REPO_FULL_URL | sed -E 's|.*github.com[:/]([^/]+)/.*|\1|')
+#
+#            # Get the current Pull Request number dynamically (for GitHub Actions, Atlantis, etc.)
+#            echo "$PULL_REQUEST_NUMBER"
+#            $PR_NUMBER = 3
+#
+#            echo "Repo Owner: $REPO_OWNER"
+#            echo "Repo Name: $REPO_NAME"
+#            echo "PR Number: $PULL_REQUEST_NUMBER"
             
         - run: |
             echo "Posting a Custom Comment to GitHub..."
