--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -75,7 +75,7 @@ workflows:
 
 
             # Post the comment to the PR dynamically
-            curl -s -X POST -H "Authorization: token $GITHUB_TOKEN" \
+            curl -s -X POST -H "Authorization: token $ATLANTIS_GH_TOKEN" \
               -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/shanksfk/atlantis-server-test/issues/3/comments" \
               -d "{\"body\": \"$COMMENT_BODY\"}"
