--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -56,11 +56,9 @@ workflows:
 
             # Automatically extract repo owner and name from git remote
             REPO_FULL_URL=$(git config --get remote.origin.url)
-            REPO_NAME=$(basename -s .git $(echo $REPO_FULL_URL | sed -E 's|.*github.com[:/](.*)|\1|'))
-            REPO_OWNER=$(echo $REPO_FULL_URL | sed -E 's|.*github.com[:/]([^/]+)/.*|\1|')
-
+            
             # Get the current Pull Request number dynamically (for GitHub Actions, Atlantis, etc.)
-            echo "$PULL_REQUEST_NUMBER"
+            echo "$REPO_FULL_URL"
             $PR_NUMBER = 3
 
             echo "Repo Owner: $REPO_OWNER"
@@ -69,7 +67,7 @@ workflows:
             
         - run: |
             echo "Posting a Custom Comment to GitHub..."
-            COMMENT_BODY="tesrt comment"
+            COMMENT_BODY="test comment"
 
 
             # Post the comment to the PR dynamically
