--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -51,24 +51,24 @@ workflows:
 #            # Print the comment for debugging
 #            echo "Generated Comment:"
 #            cat comment.md
-        - run: |
-            echo "Extracting GitHub Repository Details..."
-        
-            # Get the full remote URL without printing it
-            REPO_FULL_URL=$(git config --get remote.origin.url)
-        
-            # Extract repo owner and name WITHOUT printing token
-            REPO_NAME=$(basename -s .git $(echo "$REPO_FULL_URL" | sed -E 's|.*github.com[:/](.*)|\1|' | cut -d'/' -f2))
-            REPO_OWNER=$(echo "$REPO_FULL_URL" | sed -E 's|.*github.com[:/]([^/]+)/.*|\1|')
-        
-            # Hardcoded PR number for testing
-            PR_NUMBER=3
-        
-            # Print extracted values without exposing URL
-            echo "✅ Repo Owner: $REPO_OWNER"
-            echo "✅ Repo Name: $REPO_NAME"
-            echo "✅ PR Number: $PR_NUMBER"
-            
+#        - run: |
+#            echo "Extracting GitHub Repository Details..."
+#
+#            # Get the full remote URL without printing it
+#            REPO_FULL_URL=$(git config --get remote.origin.url)
+#
+#            # Extract repo owner and name WITHOUT printing token
+#            REPO_NAME=$(basename -s .git $(echo "$REPO_FULL_URL" | sed -E 's|.*github.com[:/](.*)|\1|' | cut -d'/' -f2))
+#            REPO_OWNER=$(echo "$REPO_FULL_URL" | sed -E 's|.*github.com[:/]([^/]+)/.*|\1|')
+#
+#            # Hardcoded PR number for testing
+#            PR_NUMBER=3
+#
+#            # Print extracted values without exposing URL
+#            echo "✅ Repo Owner: $REPO_OWNER"
+#            echo "✅ Repo Name: $REPO_NAME"
+#            echo "✅ PR Number: $PR_NUMBER"
+#
         - run: |
             echo "Posting a Custom Comment to GitHub..."
             COMMENT_BODY="tesrt comment"
