--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -25,32 +25,30 @@ workflows:
         - run: |
             echo "Running OPA policy checks..."
             echo "## OPA Policy Check Results"
-
+        
             # Run OPA and save output
             opa eval --format json --data policy.rego --input tfplan.json "data.terraform.analysis.violations" > opa_output.json
-
+        
             # Parse OPA output and generate Markdown table
             echo "DEBUG: OPA Output Structure:"
-            cat opa_output.json
-
-            # Generate Markdown table
+            cat opa_output.json | jq .
+        
+            # Generate Markdown table with extracted violations
             echo "Generating Markdown table..."
-            jq -r '
-              ["Resource", "Violation", "Message"] as $headers |
-              [["---", "---", "---"]] as $separator |
-              .result[].expressions[].value[]? |
-              [.resource, .violation, .message] as $row |
-              [$headers, $separator, $row] |
-              .[] | @tsv
-            ' opa_output.json | sed 's/\t/ | /g' > opa_table.md
-
+            echo "| # | Violation Message |" > opa_table.md
+            echo "|---|--------------------|" >> opa_table.md
+        
+            jq -r '.result[].expressions[].value[]' opa_output.json | awk '{print "| " NR " | " $0 " |"}' >> opa_table.md
+        
             # Add Markdown table to a comment file
-            echo -e "### OPA Policy Check Results\n" > comment.md
+            echo -e "### 🚨 OPA Policy Violations Detected!\n" > comment.md
             cat opa_table.md >> comment.md
-
+            echo -e "\n❌ **Fix these violations before applying Terraform!**" >> comment.md
+        
             # Print the comment for debugging
             echo "Generated Comment:"
             cat comment.md
+
 #        - run: |
 #            echo "Extracting GitHub Repository Details..."
 #
