--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -82,8 +82,7 @@ workflows:
             curl -s -X POST -H "Authorization: token $ATLANTIS_GH_TOKEN" \
               -H "Accept: application/vnd.github.v3+json" \
               "https://api.github.com/repos/shanksfk/atlantis-server-test/issues/3/comments" \
-               -d '{"body": "### Test comment\n| # | Violation |\n|---|------------|\n| 1 | Example issue |"}'
-
+              -d "$PAYLOAD"
     apply:
       steps:
         - run: |
