--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -36,7 +36,7 @@ workflows:
             # Generate Markdown table with extracted violations
             echo "Generating Markdown table..."
             echo "| # | Violation Message |" > opa_table.md
-            echo "|---|--------------------|" >> opa_table.md
+            echo "|-----|--------------------|" >> opa_table.md
         
             jq -r '.result[].expressions[].value[]' opa_output.json | awk '{print "| " NR " | " $0 " |"}' >> opa_table.md
         
