--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -23,15 +23,12 @@ workflows:
             terraform plan -out=tfplan.binary
             terraform show -json tfplan.binary > tfplan.json
         - run: |
-            echo "Running OPA policy checks..."
-            echo "## OPA Policy Check Results"
-        
-            # Run OPA and save output
+
             opa eval --format json --data policy.rego --input tfplan.json "data.terraform.analysis.violations" > opa_output.json
         
-            # Parse OPA output and generate Markdown table
-            echo "DEBUG: OPA Output Structure:"
-            cat opa_output.json | jq .
+#            # Parse OPA output and generate Markdown table
+#            echo "DEBUG: OPA Output Structure:"
+#            cat opa_output.json | jq .
         
             # Generate Markdown table with extracted violations
             echo "Generating Markdown table..."
@@ -44,39 +41,22 @@ workflows:
             echo "### OPA Policy Violations Detected!\n" > comment.md
             cat opa_table.md >> comment.md
             echo "\n **Fix these violations before applying Terraform!**" >> comment.md
-        
-            # Print the comment for debugging
-            echo "Generated Comment:"
-            cat comment.md
+#
+#            # Print the comment for debugging
+#            echo "Generated Comment:"
+#            cat comment.md
             
-
-        - run: |
-            echo "Extracting GitHub Repository Details..."
-        
-            # Use Atlantis environment variables for repo owner, name, and PR number
-            REPO_OWNER="$BASE_REPO_OWNER"
-            REPO_NAME="$BASE_REPO_NAME"
-            PR_NUMBER="$PULL_NUM"
-        
-            # Print extracted values
-            echo " Repo Owner: $REPO_OWNER"
-            echo "  Repo Name: $REPO_NAME"
-            echo "PR Number: $PR_NUMBER"
 
         - run: |
             echo "Posting a Custom Comment to GitHub..."
 
             # Read comment.md safely and escape special characters
             COMMENT_BODY=$(jq -Rs . < comment.md | tr -d '\r')
-            echo "📜 Debugging comment.md content..."
-            cat -A comment.md  # Shows hidden characters (e.g., ^M, NULL)
-            echo "-------------------------------------"
-            cat comment.md     # Prints the raw content normally
+
 
             # Debug: Print the escaped JSON payload before sending
             PAYLOAD="{\"body\": $COMMENT_BODY}"
-            echo "Generated JSON Payload:"
-            echo "$PAYLOAD" | jq 
+
 
             # Post the comment to the PR dynamically
             curl -s -X POST -H "Authorization: token $ATLANTIS_GH_TOKEN" \
