--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -23,12 +23,15 @@ workflows:
             terraform plan -out=tfplan.binary
             terraform show -json tfplan.binary > tfplan.json
         - run: |
-
+            echo "Running OPA policy checks..."
+            echo "## OPA Policy Check Results"
+        
+            # Run OPA and save output
             opa eval --format json --data policy.rego --input tfplan.json "data.terraform.analysis.violations" > opa_output.json
         
-#            # Parse OPA output and generate Markdown table
-#            echo "DEBUG: OPA Output Structure:"
-#            cat opa_output.json | jq .
+            # Parse OPA output and generate Markdown table
+            echo "DEBUG: OPA Output Structure:"
+            cat opa_output.json | jq .
         
             # Generate Markdown table with extracted violations
             echo "Generating Markdown table..."
