--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -22,6 +22,10 @@ workflows:
             echo "Generating Terraform plan in JSON format..."
             terraform plan -out=tfplan.binary
             terraform show -json tfplan.binary > tfplan.json
+            #
+            #            # Print the comment for debugging
+            #            echo "Generated Comment:"
+            #            cat comment.md
         - run: |
             echo "Running OPA policy checks..."
             echo "## OPA Policy Check Results"
